# icu-rbnf

./: .gitignore  .projectile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish.yml  wheels.yml
icu_rbnf/: __init__.py  __init__.pyi
script/: format  lint
src/: icu_rbnf.cpp
tests/: test_icu_rbnf.py
