[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icu_rbnf"
version = "0.1.0"
description = "Spell out numbers into words using ICU RBNF"
readme = "README.md"
requires-python = ">=3.9"
license     = {text = "Apache-2.0"}
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
]

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "flake8==7.3.0",
    "mypy==1.19.0",
    "pylint==4.0.2",
    "pytest==8.4.2",
    "build==1.3.0",
]

[project.urls]
Homepage = "https://github.com/OHF-voice/icu_rbnf"
Issues = "https://github.com/OHF-voice/icu_rbnf/issues"

[tool.setuptools]
packages = ["icu_rbnf"]
